--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   </head>
   <body>
     <div class="header">
-      <nav id="navbar"></nav>
+      <nav id="navbar">
+        <header id="main-title">Official FreeBsd Documentation</header>
+        <ul>
+            <li>
+            <a href="#installation_freebsd" class="nav-link">installation freebsd</a></li>
+            <li><a href="#getting_started" class="nav-link">getting started</a></li>
+            <li><a href="#basics" class="nav-link">basics</a></li>
+            <li><a href="#disks_organisation" class="nav-link">disks organisation</a></li>
+            <li><a href="#configuring_the_kernel" class="nav-link">configuring the kernel</a></li>
+            <li><a href="#security" class="nav-link">security</a></li>
+            <li><a href="#configuration_and_tuning" class="nav-link">configuration and tuning</a></li>
+            <li><a href="#printing" class="nav-link">printing</a></li>
+        </ul>
+      </nav>
     </div>
     <main id="main-doc">
       <section class="main-section" id="installation_freebsd">
@@ -195,19 +208,30 @@
         </p>
         <p>After reading this chapter, you will know:</p>
         <ul>
-            <li>Basic FreeBSD system security concepts.</li>
-            <li>The various crypt mechanisms available in FreeBSD.</li>
-            <li>How to set up one-time password authentication.</li>
-            <li>How to set up Kerberos on FreeBSD.</li>
-            <li>How to configure IPsec and create a VPN.</li>
-            <li>How to configure and use OpenSSH on FreeBSD.</li>
-            <li>How to use file system ACLs.</li>
+          <li>Basic FreeBSD system security concepts.</li>
+          <li>The various crypt mechanisms available in FreeBSD.</li>
+          <li>How to set up one-time password authentication.</li>
+          <li>How to set up Kerberos on FreeBSD.</li>
+          <li>How to configure IPsec and create a VPN.</li>
+          <li>How to configure and use OpenSSH on FreeBSD.</li>
+          <li>How to use file system ACLs.</li>
         </ul>
-        <h3> Introduction</h3>
-        <p>Security is everyone’s responsibility. A weak entry point in any system could allow intruders to gain access to critical information and cause havoc on an entire network. One of the core principles of information security is the CIA triad, which stands for the Confidentiality, Integrity, and Availability of information systems.
-
+        <h3>Introduction</h3>
+        <p>
+          Security is everyone’s responsibility. A weak entry point in any
+          system could allow intruders to gain access to critical information
+          and cause havoc on an entire network. One of the core principles of
+          information security is the CIA triad, which stands for the
+          Confidentiality, Integrity, and Availability of information systems.
         </p>
-        <p>The CIA triad is a bedrock concept of computer security as customers and users expect their data to be protected. For example, a customer expects that their credit card information is securely stored (confidentiality), that their orders are not changed behind the scenes (integrity), and that they have access to their order information at all times (availability).</p>
+        <p>
+          The CIA triad is a bedrock concept of computer security as customers
+          and users expect their data to be protected. For example, a customer
+          expects that their credit card information is securely stored
+          (confidentiality), that their orders are not changed behind the scenes
+          (integrity), and that they have access to their order information at
+          all times (availability).
+        </p>
       </section>
       <section class="main-section" id="configuration_and_tuning">
         <header><h2>configuration and tuning</h2></header>
